--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
     <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
-          <a href="./index.html" class="link logo-flex">
-            <p class="logo">
-              Web<span class="logo-header-studio">Studio</span>
-            </p>
+          <a href="./index.html" class="link logo_indent--right logo">
+            Web<span class="logo_color--dark">Studio</span>
           </a>
           <ul class="header-list list">
             <li class="header-item">
@@ -414,29 +412,29 @@
       <div class="container">
         <div class="footer-section">
           <div class="footer-section-item">
-            <a href="./index.html" class="link footer-logo logo"
-              >Web<span class="logo-footer-studio">Studio</span>
+            <a href="./index.html" class="link logo_indent--bottom logo"
+              >Web<span class="logo_color--light">Studio</span>
             </a>
             <address class="footer-contact">
               <ul class="footer-list list">
                 <li class="footer-item">
                   <a
-                    class="footer-link link address"
+                    class="link address"
                     href="https://goo.gl/maps/CdvJLRiEL6Q8Smko8"
                     target="blank"
                     rel="noreferrer noopener"
                     >г. Киев, пр-т Леси Украинки, 26</a
                   >
                 </li>
-                <li class="footer-link">
+                <li class="footer-item">
                   <a
-                    class="footer-link link contact"
+                    class="link contact"
                     href="mailto:info@example.com"
                     >info@example.com</a
                   >
                 </li>
-                <li class="footer-link">
-                  <a class="footer-link link contact" href="tel:+380991111111"
+                <li class="footer-item">
+                  <a class="link contact" href="tel:+380991111111"
                     >+38 099 111 11 11</a
                   >
                 </li>
@@ -564,8 +562,8 @@
             Отправить
           </button>
         </form>
-        <button type="button" class="close-btn" data-modal-close>
-          <svg class="modal-icon-cancel">
+        <button type="button" class="btn-close" data-modal-close>
+          <svg class="btn-close_icon--size">
             <use href="./images/sprite6.svg#icon-cancel-circle"></use>
           </svg>
         </button>
