--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-btn btn" type="button" data-modal-open>
+          <button class="btn btn_hero " type="button" data-modal-open>
             Заказать услугу
           </button>
         </div>
@@ -133,7 +133,7 @@
       <!-- Чем мы занимаемся -->
       <section class="section wedoing">
         <div class="container">
-          <h2 class="wedoing-title">Чем мы занимаемся</h2>
+          <h2 class="title-h2  title-h2_indent--bottom">Чем мы занимаемся</h2>
           <ul class="wedoing-list list">
             <li class="wedoing-item">
               <img
@@ -165,7 +165,7 @@
       <!-- НАША КОМАНДА -->
       <section class="ourteam section">
         <div class="container">
-          <h2 class="ourteam-title">Наша команда</h2>
+          <h2 class="title-h2  title-h2_indent--bottom">Наша команда</h2>
           <ul class="ourteam-list list">
             <li class="ourteam-item ourteam-card">
               <img
@@ -351,9 +351,9 @@
         </div>
       </section>
       <!-- ПОСТОЯННЫЕ КЛИЕНТЫ -->
-      <section class="clients section">
+      <section class="section">
         <div class="container">
-          <h2 class="clients-title">Постоянные клиенты</h2>
+          <h2 class="title-h2  title-h2_indent--bottom">Постоянные клиенты</h2>
           <ul class="clients-list list">
             <li class="clients-item">
               <!-- 1 -->
@@ -411,7 +411,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-section">
-          <div class="footer-section-item">
+          <div class="footer-section_item">
             <a href="./index.html" class="link logo_indent--bottom logo"
               >Web<span class="logo_color--light">Studio</span>
             </a>
@@ -441,54 +441,54 @@
               </ul>
             </address>
           </div>
-          <div class="footer-section-item">
-            <h2 class="section-common-title">присоединяйтесь</h2>
-            <ul class="section-common-list list">
-              <li class="section-common-item">
-                <a class="section-common-link link" href="">
-                  <svg class="section-common-pkt">
+          <div class="footer-section_item">
+            <h2 class="section-common_title">присоединяйтесь</h2>
+            <ul class="section-common_list list">
+              <li class="section-common_item">
+                <a class="section-common_link link" href="">
+                  <svg class="section-common_pkt">
                     <use href="./images/sprite6.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="section-common-item">
-                <a class="section-common-link link" href="">
-                  <svg class="section-common-pkt">
+              <li class="section-common_item">
+                <a class="section-common_link link" href="">
+                  <svg class="section-common_pkt">
                     <use href="./images/sprite6.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="section-common-item">
-                <a class="section-common-link link" href="">
-                  <svg class="section-common-pkt">
+              <li class="section-common_item">
+                <a class="section-common_link link" href="">
+                  <svg class="section-common_pkt">
                     <use href="./images/sprite6.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="section-common-item">
-                <a class="section-common-link link" href="">
-                  <svg class="section-common-pkt">
+              <li class="section-common_item">
+                <a class="section-common_link link" href="">
+                  <svg class="section-common_pkt">
                     <use href="./images/sprite6.svg#icon-linkedin "></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
-          <div class="footer-section-item">
-            <h2 class="footer-mailing-title">Подпишитесь на рассылку</h2>
-            <form class="footer-mailing-form">
+          <div class="footer-section_item">
+            <h2 class="footer-mailing_title">Подпишитесь на рассылку</h2>
+            <form class="footer-mailing_form">
               <label>
                 <input
                   type="email"
                   name="email"
                   placeholder="E-mail"
-                  class="footer-mailing-box"
+                  class="footer-mailing_box"
                 />
               </label>
-              <button type="submit" class="hero-btn btn footer-mailing-btn">
+              <button type="submit" class="btn btn_hero  footer-mailing_btn">
                 Подписаться
               </button>
-              <svg class="footer-mailing-icon">
+              <svg class="footer-mailing_icon">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </form>
@@ -558,7 +558,7 @@
                 <use href="./images/icons.svg#icon-check"></use>
               </svg>
             </span>Соглашаюсь с рассылкой и принимаю&#160;<a href="#"> Условия договора</a></label>
-          <button type="submit" class="hero-btn btn modal-btn">
+          <button type="submit" class="btn btn_hero modal-btn">
             Отправить
           </button>
         </form>
