--- a/portofolio.html
+++ b/portofolio.html
@@ -310,7 +310,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-section">
-          <div class="footer-section-item">
+          <div class="footer-section_item">
             <a href="./index.html" class="link logo_indent--bottom logo"
               >Web<span class="logo_color--light">Studio</span>
             </a>
@@ -340,54 +340,54 @@
               </ul>
             </address>
           </div>
-          <div class="footer-section-item">
-            <h2 class="section-common-title">присоединяйтесь</h2>
-            <ul class="section-common-list list">
-              <li class="section-common-item">
-                <a class="section-common-link link" href="">
-                  <svg class="section-common-pkt">
+          <div class="footer-section_item">
+            <h2 class="section-common_title">присоединяйтесь</h2>
+            <ul class="section-common_list list">
+              <li class="section-common_item">
+                <a class="section-common_link link" href="">
+                  <svg class="section-common_pkt">
                     <use href="./images/sprite6.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="section-common-item">
-                <a class="section-common-link link" href="">
-                  <svg class="section-common-pkt">
+              <li class="section-common_item">
+                <a class="section-common_link link" href="">
+                  <svg class="section-common_pkt">
                     <use href="./images/sprite6.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="section-common-item">
-                <a class="section-common-link link" href="">
-                  <svg class="section-common-pkt">
+              <li class="section-common_item">
+                <a class="section-common_link link" href="">
+                  <svg class="section-common_pkt">
                     <use href="./images/sprite6.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="section-common-item">
-                <a class="section-common-link link" href="">
-                  <svg class="section-common-pkt">
+              <li class="section-common_item">
+                <a class="section-common_link link" href="">
+                  <svg class="section-common_pkt">
                     <use href="./images/sprite6.svg#icon-linkedin "></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
-          <div class="footer-section-item">
-            <h2 class="footer-mailing-title">Подпишитесь на рассылку</h2>
-            <form class="footer-mailing-form">
+          <div class="footer-section_item">
+            <h2 class="footer-mailing_title">Подпишитесь на рассылку</h2>
+            <form class="footer-mailing_form">
               <label>
                 <input
                   type="email"
                   name="email"
                   placeholder="E-mail"
-                  class="footer-mailing-box"
+                  class="footer-mailing_box"
                 />
               </label>
-              <button type="submit" class="hero-btn btn footer-mailing-btn">
+              <button type="submit" class="btn btn_hero footer-mailing_btn">
                 Подписаться
               </button>
-              <svg class="footer-mailing-icon">
+              <svg class="footer-mailing_icon">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </form>
