--- a/portofolio.html
+++ b/portofolio.html
@@ -25,12 +25,12 @@
   <body>
     <!-- НАВИГАЦИЯ -->
     <header class="header">
-      <div class="container header-container">
-        <nav class="header-navigation">
+      <div class="container dis-fl--da">
+        <nav class="dis-fl--da">
           <a href="./index.html" class="link logo_indent--right logo">
               Web<span class="logo_color--dark">Studio</span>
           </a>
-          <ul class="header-list list">
+          <ul class="dis-fl--da list">
             <li class="header-item">
               <a class="header-link link" href="./index.html">Студия</a>
             </li>
