--- a/index.html
+++ b/index.html
@@ -25,36 +25,36 @@
   <body>
     <!-- НАВИГАЦИЯ -->
     <header class="header">
-      <div class="container dis-fl--da">
-        <nav class="dis-fl--da">
+      <div class="container dis-fl_d dis-fl_a">
+        <nav class="dis-fl_d dis-fl_a">
           <a href="./index.html" class="link logo_indent--right logo">
-            Web<span class="logo_color--dark">Studio</span>
+            Web<span class="logo--dark">Studio</span>
           </a>
-          <ul class="dis-fl--da list">
-            <li class="header-item">
-              <a class="header-link link current" href="./index.html">Студия</a>
+          <ul class="dis-fl_d dis-fl_a list">
+            <li class="header_item">
+              <a class="header_link link current" href="./index.html">Студия</a>
             </li>
-            <li class="header-item">
-              <a class="header-link link" href="./portofolio.html"
+            <li class="header_item">
+              <a class="header_link link" href="./portofolio.html"
                 >Портофолио</a
               >
             </li>
-            <li class="header-item">
-              <a class="header-link link" href="">Контакты</a>
+            <li class="header_item">
+              <a class="header_link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="header-kontacts-flex list">
-          <li class="header-kontacts-item header-kontacts-sep">
-            <a class="header-link-item link" href="mailto:info@devstudio.com">
+        <ul class="header_kontacts-flex list">
+          <li class="header_kontacts-item header_kontacts-sep">
+            <a class="header_link-item link" href="mailto:info@devstudio.com">
               <svg class="icon" width="16" height="12">
                 <use href="./images/sprite6.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="header-kontacts-item">
-            <a class="header-link-item link" href="tel:+380961111111">
+          <li class="header_kontacts-item">
+            <a class="header_link-item link" href="tel:+380961111111">
               <svg class="icon" width="10" height="16">
                 <use href="./images/sprite6.svg#icon-smartphone"></use>
               </svg>
@@ -69,7 +69,7 @@
       <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="btn btn_hero " type="button" data-modal-open>
+          <button class="btn btn_hero" type="button" data-modal-open>
             Заказать услугу
           </button>
         </div>
@@ -133,31 +133,31 @@
       <!-- Чем мы занимаемся -->
       <section class="section wedoing">
         <div class="container">
-          <h2 class="title-h2  title-h2_indent--bottom">Чем мы занимаемся</h2>
+          <h2 class="section_title">Чем мы занимаемся</h2>
           <ul class="wedoing-list list">
-            <li class="wedoing-item">
+            <li class="wedoing_item">
               <img
                 src="./images/desk-office.jpg"
                 alt="Разработка логики работы программы"
                 width="370"
               />
-              <p class="wedoing-text">Десктопные приложения</p>
+              <p class="wedoing_text">Десктопные приложения</p>
             </li>
-            <li class="wedoing-item">
+            <li class="wedoing_item">
               <img
                 src="./images/mobile-phones.jpg"
                 alt="Дизайн интерфейса на мобильных устройствах"
                 width="370"
               />
-              <p class="wedoing-text">Мобильные приложения</p>
+              <p class="wedoing_text">Мобильные приложения</p>
             </li>
-            <li class="wedoing-item">
+            <li class="wedoing_item">
               <img
                 src="./images/colour-tablet.jpg"
                 alt="Выбор цветового решения"
                 width="370"
               />
-              <p class="wedoing-text">Дизайнерские решения</p>
+              <p class="wedoing_text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -165,7 +165,7 @@
       <!-- НАША КОМАНДА -->
       <section class="ourteam section">
         <div class="container">
-          <h2 class="title-h2  title-h2_indent--bottom">Наша команда</h2>
+          <h2 class="section_title">Наша команда</h2>
           <ul class="ourteam-list list">
             <li class="ourteam-item ourteam-card">
               <img
@@ -353,7 +353,7 @@
       <!-- ПОСТОЯННЫЕ КЛИЕНТЫ -->
       <section class="section">
         <div class="container">
-          <h2 class="title-h2  title-h2_indent--bottom">Постоянные клиенты</h2>
+          <h2 class="section_title">Постоянные клиенты</h2>
           <ul class="clients-list list">
             <li class="clients-item">
               <!-- 1 -->
@@ -413,7 +413,7 @@
         <div class="footer-section">
           <div class="footer-section_item">
             <a href="./index.html" class="link logo_indent--bottom logo"
-              >Web<span class="logo_color--light">Studio</span>
+              >Web<span class="logo--light">Studio</span>
             </a>
             <address class="footer-contact">
               <ul class="footer-list list">
@@ -427,9 +427,7 @@
                   >
                 </li>
                 <li class="footer-item">
-                  <a
-                    class="link contact"
-                    href="mailto:info@example.com"
+                  <a class="link contact" href="mailto:info@example.com"
                     >info@example.com</a
                   >
                 </li>
@@ -517,12 +515,12 @@
           <div class="modal-field">
             <label for="user-tel" class="input-label">Телефон</label>
             <span class="input-wrapper">
-            <input
-              type="tel"
-              name="user-tel"
-              id="user-tel"
-              class="modal-input"              
-            />
+              <input
+                type="tel"
+                name="user-tel"
+                id="user-tel"
+                class="modal-input"
+              />
               <svg class="input-icon">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
@@ -531,12 +529,12 @@
           <div class="modal-field">
             <label for="user-mail" class="input-label">Почта</label>
             <span class="input-wrapper">
-            <input
-              type="email"
-              name="user-mail"
-              id="user-mail"
-              class="modal-input"
-            />
+              <input
+                type="email"
+                name="user-mail"
+                id="user-mail"
+                class="modal-input"
+              />
               <svg class="input-icon">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
@@ -544,20 +542,27 @@
           </div>
           <div class="modal-field">
             <label for="user-commit" class="input-label">Комментарий</label>
-              <textarea 
-                name="user-commit" 
-                id="user-commit" 
-                class="modal-user-commit"
-                placeholder="Введите текст"
-              ></textarea>
+            <textarea
+              name="user-commit"
+              id="user-commit"
+              class="modal-user-commit"
+              placeholder="Введите текст"
+            ></textarea>
           </div>
-          <input  type="checkbox" id="modal-checkbox" class="modal-checkbox visually-hidden"/>
+          <input
+            type="checkbox"
+            id="modal-checkbox"
+            class="modal-checkbox visually-hidden"
+          />
           <label for="modal-checkbox" class="check-text"
             ><span>
               <svg class="check-icon" width="11" height="8">
                 <use href="./images/icons.svg#icon-check"></use>
-              </svg>
-            </span>Соглашаюсь с рассылкой и принимаю&#160;<a href="#"> Условия договора</a></label>
+              </svg> </span
+            >Соглашаюсь с рассылкой и принимаю&#160;<a href="#">
+              Условия договора</a
+            ></label
+          >
           <button type="submit" class="btn btn_hero modal-btn">
             Отправить
           </button>
