--- a/portofolio.html
+++ b/portofolio.html
@@ -25,36 +25,36 @@
   <body>
     <!-- НАВИГАЦИЯ -->
     <header class="header">
-      <div class="container dis-fl--da">
-        <nav class="dis-fl--da">
+      <div class="container dis-fl_d dis-fl_a">
+        <nav class="dis-fl_d dis-fl_a">
           <a href="./index.html" class="link logo_indent--right logo">
-              Web<span class="logo_color--dark">Studio</span>
+            Web<span class="logo--dark">Studio</span>
           </a>
-          <ul class="dis-fl--da list">
-            <li class="header-item">
-              <a class="header-link link" href="./index.html">Студия</a>
+          <ul class="dis-fl_d dis-fl_a list">
+            <li class="header_item">
+              <a class="header_link link" href="./index.html">Студия</a>
             </li>
-            <li class="header-item">
-              <a class="header-link link current" href="./portofolio.html"
+            <li class="header_item">
+              <a class="header_link link current" href="./portofolio.html"
                 >Портофолио</a
               >
             </li>
-            <li class="header-item">
-              <a class="header-link link" href="">Контакты</a>
+            <li class="header_item">
+              <a class="header_link link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="header-kontacts-flex list">
-          <li class="header-kontacts-item header-kontacts-sep">
-            <a class="header-link-item link" href="mailto:info@devstudio.com">
+        <ul class="header_kontacts-flex list">
+          <li class="header_kontacts-item header_kontacts-sep">
+            <a class="header_link-item link" href="mailto:info@devstudio.com">
               <svg class="icon" width="16" height="12">
                 <use href="./images/sprite6.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="header-kontacts-item">
-            <a class="header-link-item link" href="tel:+380961111111">
+          <li class="header_kontacts-item">
+            <a class="header_link-item link" href="tel:+380961111111">
               <svg class="icon" width="10" height="16">
                 <use href="./images/sprite6.svg#icon-smartphone"></use>
               </svg>
@@ -71,7 +71,10 @@
           <h1 class="portofolio-hero-title visually-hidden">Портофолио</h1>
           <ul class="filtr-list list">
             <li class="filtr-item">
-              <button class="btn-filtr btn-filtr_color carrent-btn" type="button">
+              <button
+                class="btn-filtr btn-filtr_color carrent-btn"
+                type="button"
+              >
                 Все
               </button>
             </li>
@@ -86,7 +89,9 @@
               </button>
             </li>
             <li class="filtr-item">
-              <button class="btn-filtr btn-filtr_color" type="button">Дизайн</button>
+              <button class="btn-filtr btn-filtr_color" type="button">
+                Дизайн
+              </button>
             </li>
             <li class="filtr-item">
               <button class="btn-filtr btn-filtr_color" type="button">
@@ -95,9 +100,9 @@
             </li>
           </ul>
           <!-- ПОРТОФОЛИО -->
-          <ul class="portofolio-list list">
+          <ul class="portofolio_list list">
             <!--0-->
-            <li class="portofolio-item">
+            <li class="portofolio_item">
               <!--1-1-->
               <a href="" class="portofolio-link link">
                 <div class="portofolio-top-wrappter">
@@ -112,13 +117,13 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="portofolio-item-card">
-                  <h2 class="portofolio-item-title">Технокряк</h2>
-                  <p class="portofolio-item-text" lang="en">Веб-сайт</p>
+                <div class="portofolio_item-card">
+                  <h2 class="portofolio_item-title">Технокряк</h2>
+                  <p class="portofolio_item-text" lang="en">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portofolio-item">
+            <li class="portofolio_item">
               <!--1-2-->
               <a href="" class="portofolio-link link">
                 <div class="portofolio-top-wrappter">
@@ -127,21 +132,21 @@
                     alt="Постер баскетболисты."
                     width="370"
                   />
-                    <p class="porofolio-top-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера конкурентов.
-                    </p>
+                  <p class="porofolio-top-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
-                <div class="portofolio-item-card">
-                  <h2 class="portofolio-item-title">
+                <div class="portofolio_item-card">
+                  <h2 class="portofolio_item-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
-                  <p class="portofolio-item-text">Дизайн</p>
+                  <p class="portofolio_item-text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portofolio-item">
+            <li class="portofolio_item">
               <!--1-3-->
               <a href="" class="portofolio-link link">
                 <div class="portofolio-top-wrappter">
@@ -156,15 +161,15 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="portofolio-item-card">
-                  <h2 class="portofolio-item-title">
+                <div class="portofolio_item-card">
+                  <h2 class="portofolio_item-title">
                     Ресторан <span lang="en">Seafood</span>
                   </h2>
-                  <p class="portofolio-item-text">Приложение</p>
+                  <p class="portofolio_item-text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="portofolio-item">
+            <li class="portofolio_item">
               <!--2-1-->
               <a href="" class="portofolio-link link">
                 <div class="portofolio-top-wrappter">
@@ -179,15 +184,15 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="portofolio-item-card">
-                  <h2 class="portofolio-item-title">
+                <div class="portofolio_item-card">
+                  <h2 class="portofolio_item-title">
                     Проект <span lang="en">Prime</span>
                   </h2>
-                  <p class="portofolio-item-text">Маркетинг</p>
+                  <p class="portofolio_item-text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portofolio-item">
+            <li class="portofolio_item">
               <!--2-2-->
               <a href="" class="portofolio-link link">
                 <div class="portofolio-top-wrappter">
@@ -202,15 +207,15 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="portofolio-item-card">
-                  <h2 class="portofolio-item-title">
+                <div class="portofolio_item-card">
+                  <h2 class="portofolio_item-title">
                     Проект <span lang="en">Boxes</span>
                   </h2>
-                  <p class="portofolio-item-text">Приложение</p>
+                  <p class="portofolio_item-text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="portofolio-item">
+            <li class="portofolio_item">
               <!--2-3-->
               <a href="" class="portofolio-link link">
                 <div class="portofolio-top-wrappter">
@@ -225,15 +230,15 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="portofolio-item-card">
-                  <h2 class="portofolio-item-title" lang="en">
+                <div class="portofolio_item-card">
+                  <h2 class="portofolio_item-title" lang="en">
                     Inspiration has no Borders
                   </h2>
-                  <p class="portofolio-item-text">Веб-сайт</p>
+                  <p class="portofolio_item-text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portofolio-item">
+            <li class="portofolio_item">
               <!--3-1-->
               <a href="" class="portofolio-link link">
                 <div class="portofolio-top-wrappter">
@@ -248,15 +253,15 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="portofolio-item-card">
-                  <h2 class="portofolio-item-title">
+                <div class="portofolio_item-card">
+                  <h2 class="portofolio_item-title">
                     Издание <span lang="en">Limited Edition</span>
                   </h2>
-                  <p class="portofolio-item-text">Дизайн</p>
+                  <p class="portofolio_item-text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portofolio-item">
+            <li class="portofolio_item">
               <!--3-2-->
               <a href="" class="portofolio-link link">
                 <div class="portofolio-top-wrappter">
@@ -266,20 +271,20 @@
                     width="370"
                   />
                   <p class="porofolio-top-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="portofolio-item-card">
-                  <h2 class="portofolio-item-title">
+                <div class="portofolio_item-card">
+                  <h2 class="portofolio_item-title">
                     Проект <span lang="en">Lab</span>
                   </h2>
-                  <p class="portofolio-item-text">Маркетинг</p>
+                  <p class="portofolio_item-text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portofolio-item">
+            <li class="portofolio_item">
               <!--3-3-->
               <a href="" class="portofolio-link link">
                 <div class="portofolio-top-wrappter">
@@ -289,16 +294,16 @@
                     width="370"
                   />
                   <p class="porofolio-top-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера конкурентов.
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="portofolio-item-card">
-                  <h2 class="portofolio-item-title" lang="en">
+                <div class="portofolio_item-card">
+                  <h2 class="portofolio_item-title" lang="en">
                     Growing Busines
                   </h2>
-                  <p class="portofolio-item-text">Приложение</p>
+                  <p class="portofolio_item-text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -312,7 +317,7 @@
         <div class="footer-section">
           <div class="footer-section_item">
             <a href="./index.html" class="link logo_indent--bottom logo"
-              >Web<span class="logo_color--light">Studio</span>
+              >Web<span class="logo--light">Studio</span>
             </a>
             <address class="footer-contact">
               <ul class="footer-list list">
@@ -326,9 +331,7 @@
                   >
                 </li>
                 <li class="footer-item">
-                  <a
-                    class="link contact"
-                    href="mailto:info@example.com"
+                  <a class="link contact" href="mailto:info@example.com"
                     >info@example.com</a
                   >
                 </li>
@@ -404,6 +407,5 @@
         </button>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
   </body>
 </html>
